<resources>
    <string name="app_name">KOLEX</string>
    <string name="login">Login</string>
    <string name="login_description">Enter your email address and password to log in</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_registration_offer">Don\'t have an account yet?</string>
    <string name="login_registration_ref">Sign Up</string>
    <string name="login_or">OR</string>
    <string name="register">Sign Up</string>
    <string name="register_description">Sign up to continue!</string>
    <string name="registration_login_offer">Do you already have an account?</string>
    <string name="registration_login_ref">Login</string>
    <string name="enter_password">Password</string>
    <string name="enter_password_confirm">Confirm your password</string>
    <string name="enter_email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_profile">Your profile</string>
    <string name="screen_exit">screen_exit</string>
    <string name="do_you_wanna_null_rezervation_and_exit">\tDo you want to cancel the reservation and exit?</string>
    <string name="cancel_reservations">Cancel reservations</string>
    <string name="cont">continue</string>
    <string name="departure_id">departure_id</string>
    <string name="arrival_id">arrival_id</string>
    <string name="departure_name">departure_name</string>
    <string name="arrival_name">arrival_name</string>
    <string name="date_and_time">date_and_time</string>
    <string name="date_and_times">date_and_times</string>
    <string name="departure_id_">departure_id_</string>
    <string name="arrival_id_">arrival_id</string>
    <string name="Stop" translatable="false">"Stop "</string>
    <string name="stop">"Stop "</string>
    <string name="Ticket">Bilet #</string>
    <string name="wagon">"Wagon "</string>
    <string name="travel">travel</string>
    <string name="price_of_ticket_2f_z">price_of_ticket %.2f zł</string>
    <string name="no_data_on_stops">no_data_on_stops</string>
    <string name="no_internet_connection">no_internet_connection</string>
    <string name="Fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="incorrect_email_address">Incorrect email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password_">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="passwords_do_not_match_">Passwords do not match</string>
    <string name="choose_place">Choose place</string>
    <string name="selected_place">Selected place</string>
    <string name="reserved_place">Reserved place</string>
    <string name="random_mode_active">Random mode active</string>
    <string name="choose_a_place_on_the_map">Choose a place on the map</string>
    <string name="departure_id__">departure_id</string>
    <string name="arrival_id__">arrival_id</string>
    <string name="date_and_time_">date_and_time</string>
    <string name="departure_name_">departure_name</string>
    <string name="arrival_name_">arrival_name</string>
    <string name="choose_station_from_list">Choose station from list</string>
    <string name="choose_station_from_list_">choose_station_from_list</string>
    <string name="enter_date_and_time_of_departure">Enter date and time of departure</string>
    <string name="stations_could_not_be_the_same">Stations could not be the same</string>
    <string name="Cannot_select_a_past_time">Cannot select a past time</string>
    <string name="departure_id___">departure_id</string>
    <string name="arrival_id___">arrival_id</string>
    <string name="date_and_time__">date_and_time</string>
    <string name="selected">"Selected: "</string>
    <string name="routesfragment">RoutesFragment</string>
    <string name="fromid">"FromId: "</string>
    <string name="toid">" toId: "</string>
    <string name="no_connections_found">No connections found</string>
    <string name="try_searching_for_another_date_or_station">Try searching for another date or station.</string>
    <string name="routesfragment_">"RoutesFragment: "</string>
    <string name="get_entity">"GET entity: "</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_internet">No Internet</string>
    <string name="please_check_your_network_connection_and_try_again">Please check your network connection and try again.</string>
    <string name="Login_error">Login error</string>
    <string name="No_connection_to_the_server">No connection to the server</string>
    <string name="Registration_error">Registration error:</string>
    <string name="no_connection_to_the_server">No connection to the server</string>
    <string name="unknown_error">Unknown error</string>
    <string name="paymentrepository">PaymentRepository</string>
    <string name="payment_repository">PaymentRepository</string>
    <string name="error">"Error: "</string>
    <string name="error_">"Error: "</string>
    <string name="Ticket_retrieval_error">Ticket retrieval error:</string>
    <string name="error_fetching_user_tickets">"Error fetching user tickets: "</string>
    <string name="No_connection_to_the_server_">No connection to the server</string>
    <string name="Ticket_download_error">Ticket download error:</string>
    <string name="error_fetching_ticket">"Error fetching ticket: "</string>
    <string name="No_connection_to_the_server__">No connection to the server</string>
    <string name="Error_downloading_profile_tickets">Error downloading profile tickets:</string>
    <string name="error_fetching_profile_tickets">"Error fetching profile tickets: "</string>
    <string name="No_connection_to_the_server___">No connection to the server</string>
    <string name="_error">"Error: "</string>
    <string name="travelrepository">TravelRepository</string>
    <string name="_error_">"Error: "</string>
    <string name="__error_">"Error: "</string>
    <string name="__error__">"Error: "</string>
    <string name="error___">"Error: "</string>
    <string name="error____">"Error: "</string>
    <string name="error_____">"Error: "</string>
    <string name="error______">"Error: "</string>
    <string name="___error">"Error: "</string>
    <string name="__error___">"Error: "</string>
    <string name="ok">OK</string>
    <string name="Profile_deleted">Profile deleted</string>
    <string name="Profile_added_successfully">Profil dodany pomyślnie</string>
    <string name="Profile_updated_successfully">Profile updated successfully</string>
    <string name="ok___">OK</string>
    <string name="ticketsviewmodel">TicketsViewModel</string>
    <string name="mock_tickets_loaded">"Mock tickets loaded: "</string>
    <string name="error_loading_mock_data">"Error loading mock data: "</string>
    <string name="error_loading_mock_data_">"Error loading mock data: "</string>
    <string name="edu_at_kolex">edu.at.kolex</string>
    <string name="station_from">Station from</string>
    <string name="station_to">Station to</string>
    <string name="Travel_plan">Travel plan</string>
    <string name="friday_13_march">Friday 13 march</string>
    <string name="Something_went_wrong">Something went wrong</string>
    <string name="Try_again">Try again</string>
    <string name="price_of_ticket_10_50_z">Price of ticket: 10,50 zł</string>
    <string name="next">Next →</string>
    <string name="Edit_personal_data">Edit personal data</string>
    <string name="name">Name</string>
    <string name="Lastname">Lastname</string>
    <string name="Save">Save</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="Not_remember_password">Not remember password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="payment_for_the_ticket">Payment_for_the_ticket</string>
    <string name="The_only_available_payment_method_account_balance">The only available payment method: account balance.</string>
    <string name="account_balance">Account balance</string>
    <string name="Amount_to_be_paid">Amount to be paid</string>
    <string name="pay_from_the_balance">Pay from the balance</string>
    <string name="Ticket_purchased">Ticket purchased</string>
    <string name="Your_payment_has_been_successfully_completed">Your payment has been successfully completed.</string>
    <string name="Oh_no_An_error_occurred">Oh no! An error occurred</string>
    <string name="Your_payment_has_been_successfully_completed_">Your payment has been successfully completed.</string>
    <string name="back_on_the_main_display">Back on the main display</string>
    <string name="continue_with_google_">Continue with Google</string>
    <string name="continue_with_facebook_">Continue with Facebook</string>
    <string name="Randomly">Randomly</string>
    <string name="Graphically">Graphically</string>
    <string name="not_choose_the_place">Not choose the place</string>
    <string name="confirm_the_place">Confirm the place</string>
    <string name="no_tickets_yet">No Tickets Yet</string>
    <string name="purchase_a_ticket_to_see_it_here">Purchase a ticket to see it here</string>
    <string name="find_a_connection">Find a connection</string>
    <string name="departure_station">Departure station</string>
    <string name="arrival_station">Arrival station</string>
    <string name="find_a_connections">Find a connections</string>
    <string name="no_travels_found">No travels found</string>
    <string name="try_searching_for_a_different_connection">Try searching for a different connection.</string>
    <string name="retry">Retry</string>
    <string name="jankowalski123_gmail_com">jankowalski123@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="account_balance_kolex">Account balance</string>
    <string name="konto_kolex_is_your_individual_prepaid_account_through_which_you_can_at_any_moment_quickly_safely_and_conveniently_purchase_a_ticket_this_is_the_fastest_and_most_convenient_method_of_payment_for_train_tickets">The KOLEX account is your individual prepaid account thanks to which you can quickly, safely, and conveniently purchase a ticket at any time. It is the fastest and most convenient method of paying for train tickets!</string>
    <string name="TOP_UP_ACCOUNT">TOP UP ACCOUNT</string>
    <string name="Exit">Exit</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="jan_kowalski">Jan Kowalski</string>
    <string name="march_13_fri_day">March ,\n13 Friday</string>
    <string name="mar_13_fri_day">March 13,\nFriday</string>
    <string name="buy_the_ticket">Buy the ticket</string>
    <string name="main_kraków">Main kraków</string>
    <string name="krak_w_p_asz_w">Kraków Płaszów</string>
    <string name="pkp_intercity">PKP Intercity</string>
    <string name="mon_15_06_2026">Mon, 15.06.2026</string>
    <string name="jan_kowalski_">Jan Kowalski</string>
    <string name="ic_1620">IC 1620</string>
    <string name="warsaw">Warsaw</string>
    <string name="krak_w">Kraków</string>
    <string name="number_places">Number places</string>
    <string name="wagon_1">Wagon 1</string>
    <string name="Swipe_left_right_to_change_the_car">Swipe left / right to change the car</string>
    <string name="search">Search</string>
    <string name="tickets">Tickets</string>
    <string name="_profile">Profile</string>

</resources>