<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seatMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F8FA"
    tools:context=".fragment.SeatMapFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:singleSelection="true"
        app:checkedButton="@id/btnRandom"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Randomly" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGraphical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Graphically" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tvSelectedSeat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/not_choose_the_place"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/toggleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpWagons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"


        app:layout_constraintTop_toBottomOf="@id/tvSelectedSeat"
        app:layout_constraintBottom_toTopOf="@id/btnConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/confirm_the_place"
        android:enabled="false"
        android:textColor="@color/black"
        app:backgroundTint="#BFD200"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>